// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`【UiButton】case: loading 属性 loading: {icon:<div>loading icon</div>} 替换loading图标 1`] = `
<button
  aria-label="button"
  class="ant-btn ui-btn twoCharNotSpace ui-btn-align-center ui-btn-loading ui-btn-loading-cover"
  role="test-ui-button"
  type="button"
>
  <span
    class="ui-btn-loading-icon"
  >
    <div>
      loading icon
    </div>
  </span>
  <span>
    loading按钮
  </span>
</button>
`;

exports[`【UiButton】case: loading 属性 loading: {loading: false} 不进行 loading 1`] = `
<button
  aria-label="button"
  class="ant-btn ui-btn twoCharNotSpace ui-btn-align-center ui-btn-loading ui-btn-loading-cover"
  role="test-ui-button"
  type="button"
>
  <span>
    loading按钮
  </span>
</button>
`;

exports[`【UiButton】case: loading 属性 loading: {type: 'contain'} loading 图标和按钮内容共存 1`] = `
<button
  aria-label="button"
  class="ant-btn ant-btn-loading ui-btn twoCharNotSpace ui-btn-align-center ui-btn-loading ui-btn-loading-contain"
  role="test-ui-button"
  type="button"
>
  <span
    class="ant-btn-loading-icon"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </span>
  <span>
    loading按钮
  </span>
</button>
`;

exports[`【UiButton】case: loading 属性 loading: true 快照相同 1`] = `
<button
  aria-label="button"
  class="ant-btn ant-btn-loading ui-btn twoCharNotSpace ui-btn-align-center ui-btn-loading ui-btn-loading-cover"
  role="test-ui-button"
  type="button"
>
  <span
    class="ant-btn-loading-icon"
  >
    <span
      aria-label="loading"
      class="anticon anticon-loading anticon-spin"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="loading"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 1024 1024"
        width="1em"
      >
        <path
          d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
        />
      </svg>
    </span>
  </span>
  <span>
    loading按钮
  </span>
</button>
`;
